--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
+
 {
   "name": "file-lab",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "electron ."
   },
   "author": "Yernemm",
-  "license": "none"
+  "license": "none",
+  "dependencies": {
+    "electron": "^9.1.0"
+  }
 }
