--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "file-lab",
   "version": "1.0.0",
@@ -10,6 +9,7 @@
   "author": "Yernemm",
   "license": "none",
   "dependencies": {
-    "electron": "^9.1.0"
+    "electron": "^9.1.0",
+    "electron-updater": "^4.3.1"
   }
 }
