--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "custom-electron-titlebar": "^3.2.3",
     "electron": "^9.1.0",
-    "electron-updater": "^4.3.1"
+    "electron-updater": "^4.3.1",
+    "ffmpeg": "0.0.4"
   }
 }
